--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,95 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&family=IBM+Plex+Mono:wght@400;500&display=swap");
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Ubuntu", sans-serif;
+  background-color: #1a1a1a;
+  color: #ffffff;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.text-brand-1 {
+  color: #26ffe5;
+}
+
+.text-brand-2 {
+  color: #86ffce;
+}
+
+.text-grey {
+  color: #a9a9a9;
+}
+
+.bg-brand-1 {
+  background-color: #26ffe5;
+}
+
+.bg-brand-2 {
+  background-color: #86ffce;
+}
+
+.bg-grey {
+  background-color: #a9a9a9;
+}
+
+.h1 {
+  @apply text-4xl font-bold;
+}
+
+.h2 {
+  @apply text-3xl font-medium;
+}
+
+.p {
+  @apply text-base font-regular;
+}
+
+.number-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 48px;
+  line-height: 62px;
+  font-weight: 500;
+}
+
+.h2-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 32px;
+  line-height: 42px;
+  font-weight: 500;
+}
+
+.logo-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 32px;
+  line-height: 42px;
+  font-weight: 500;
+}
+
+.menu-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 400;
+}
+
+.media-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.para-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.code-m {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
 }
